# audio_project_rpi

./: .gitignore  CMakeLists.txt  README.md
lib/fftw-3.3.10/: Makefile  config.h  config.status  libtool
lib/fftw-3.3.10/api/: Makefile
lib/fftw-3.3.10/api/.deps/: apiplan.Plo  configure.Plo  execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-c2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  execute.Plo  export-wisdom-to-file.Plo  export-wisdom-to-string.Plo  export-wisdom.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-system-wisdom.Plo  import-wisdom-from-file.Plo  import-wisdom-from-string.Plo  import-wisdom.Plo  malloc.Plo  map-r2r-kind.Plo  mapflags.Plo  mkprinter-file.Plo  mkprinter-str.Plo  mktensor-iodims.Plo  mktensor-iodims64.Plo  mktensor-rowmajor.Plo  plan-dft-1d.Plo  plan-dft-2d.Plo  plan-dft-3d.Plo  plan-dft-c2r-1d.Plo  plan-dft-c2r-2d.Plo  plan-dft-c2r-3d.Plo  plan-dft-c2r.Plo  plan-dft-r2c-1d.Plo  plan-dft-r2c-2d.Plo  plan-dft-r2c-3d.Plo  plan-dft-r2c.Plo  plan-dft.Plo  (+26 more)
lib/fftw-3.3.10/dft/: Makefile
lib/fftw-3.3.10/dft/.deps/: bluestein.Plo  buffered.Plo  conf.Plo  ct.Plo  dftw-direct.Plo  dftw-directsq.Plo  dftw-generic.Plo  dftw-genericbuf.Plo  direct.Plo  generic.Plo  indirect-transpose.Plo  indirect.Plo  kdft-dif.Plo  kdft-difsq.Plo  kdft-dit.Plo  kdft.Plo  nop.Plo  plan.Plo  problem.Plo  rader.Plo  rank-geq2.Plo  solve.Plo  vrank-geq1.Plo  zero.Plo
lib/fftw-3.3.10/dft/scalar/: Makefile
lib/fftw-3.3.10/dft/simd/: Makefile
lib/fftw-3.3.10/doc/: Makefile
lib/fftw-3.3.10/doc/FAQ/: Makefile
lib/fftw-3.3.10/genfft/: Makefile
lib/fftw-3.3.10/kernel/: Makefile
lib/fftw-3.3.10/kernel/.deps/: align.Plo  alloc.Plo  assert.Plo  awake.Plo  buffered.Plo  cpy1d.Plo  cpy2d-pair.Plo  cpy2d.Plo  ct.Plo  debug.Plo  extract-reim.Plo  hash.Plo  iabs.Plo  kalloc.Plo  md5-1.Plo  md5.Plo  minmax.Plo  ops.Plo  pickdim.Plo  plan.Plo  planner.Plo  primes.Plo  print.Plo  problem.Plo  rader.Plo  scan.Plo  solver.Plo  solvtab.Plo  stride.Plo  tensor.Plo  tensor1.Plo  tensor2.Plo  tensor3.Plo  tensor4.Plo  tensor5.Plo  tensor7.Plo  tensor8.Plo  tensor9.Plo  tile2d.Plo  timer.Plo  (+3 more)
lib/fftw-3.3.10/libbench2/: Makefile
lib/fftw-3.3.10/libbench2/.deps/: after-ccopy-from.Po  after-ccopy-to.Po  after-hccopy-from.Po  after-hccopy-to.Po  after-rcopy-from.Po  after-rcopy-to.Po  allocate.Po  aset.Po  bench-cost-postprocess.Po  bench-exit.Po  bench-main.Po  can-do.Po  caset.Po  dotens2.Po  info.Po  main.Po  mflops.Po  mp.Po  my-getopt.Po  ovtpvt.Po  pow2.Po  problem.Po  report.Po  speed.Po  tensor.Po  timer.Po  useropt.Po  util.Po  verify-dft.Po  verify-lib.Po  verify-r2r.Po  verify-rdft2.Po  verify.Po  zero.Po
lib/fftw-3.3.10/m4/: Makefile
lib/fftw-3.3.10/mpi/: Makefile
lib/fftw-3.3.10/rdft/: Makefile
lib/fftw-3.3.10/rdft/.deps/: buffered.Plo  buffered2.Plo  conf.Plo  ct-hc2c-direct.Plo  ct-hc2c.Plo  dft-r2hc.Plo  dht-r2hc.Plo  dht-rader.Plo  direct-r2c.Plo  direct-r2r.Plo  direct2.Plo  generic.Plo  hc2hc-direct.Plo  hc2hc-generic.Plo  hc2hc.Plo  indirect.Plo  khc2c.Plo  khc2hc.Plo  kr2c.Plo  kr2r.Plo  nop.Plo  nop2.Plo  plan.Plo  plan2.Plo  problem.Plo  problem2.Plo  rank-geq2-rdft2.Plo  rank-geq2.Plo  rank0-rdft2.Plo  rank0.Plo  rdft-dht.Plo  rdft2-inplace-strides.Plo  rdft2-rdft.Plo  rdft2-strides.Plo  rdft2-tensor-max-index.Plo  solve.Plo  solve2.Plo  (+3 more)
lib/fftw-3.3.10/reodft/: Makefile
lib/fftw-3.3.10/simd-support/: Makefile
lib/fftw-3.3.10/support/: Makefile
lib/fftw-3.3.10/tests/: Makefile  bench
lib/fftw-3.3.10/threads/: Makefile
lib/fftw-3.3.10/tools/: Makefile  fftw-wisdom
lib/libsndfile/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
lib/libsndfile/Octave/: Makefile  Makefile.in
lib/libsndfile/Scripts/: build-test-tarball.mk
lib/libsndfile/autom4te.cache/: output.0  output.3  output.4  requests  traces.0  traces.1  traces.3  traces.4
lib/libsndfile/examples/: generate  list_formats  make_sine  sfprocess  sndfile-loopify  sndfile-to-text  sndfilehandle
lib/libsndfile/programs/: sndfile-cmp  sndfile-concat  sndfile-convert  sndfile-deinterleave  sndfile-info  sndfile-interleave  sndfile-metadata-get  sndfile-metadata-set  sndfile-play  sndfile-salvage
lib/libsndfile/src/: config.h  config.h.in  libcommon.la  libcommon_la-alac.lo  libcommon_la-alaw.lo  libcommon_la-audio_detect.lo  libcommon_la-broadcast.lo  libcommon_la-cart.lo  libcommon_la-chanmap.lo  libcommon_la-chunk.lo  libcommon_la-command.lo  libcommon_la-common.lo  libcommon_la-dither.lo  libcommon_la-double64.lo  libcommon_la-dwvw.lo  libcommon_la-file_io.lo  libcommon_la-float32.lo  libcommon_la-gsm610.lo  libcommon_la-id3.lo  libcommon_la-ima_adpcm.lo  libcommon_la-ima_oki_adpcm.lo  libcommon_la-interleave.lo  libcommon_la-mpeg_decode.lo  libcommon_la-mpeg_l3_encode.lo  libcommon_la-ms_adpcm.lo  libcommon_la-nms_adpcm.lo  libcommon_la-pcm.lo  libcommon_la-strings.lo  libcommon_la-ulaw.lo  libcommon_la-vox_adpcm.lo  libcommon_la-windows.lo  libsndfile.la  libsndfile_la-aiff.lo  libsndfile_la-au.lo  libsndfile_la-avr.lo  libsndfile_la-caf.lo  libsndfile_la-dwd.lo  libsndfile_la-flac.lo  libsndfile_la-g72x.lo  libsndfile_la-htk.lo  (+30 more)
lib/libsndfile/tests/: aiff_rw_test  alaw_test  benchmark  benchmark.c  channel_test  checksum_test  chunk_test  command_test  compression_size_test  cpp_test  dither_test  dwvw_test  error_test  external_libs_test  fix_this  floating_point_test  format_check_test  header_test  headerless_test  largefile_test  locale_test  long_read_write_test  lossy_comp_test  misc_test  mpeg_test  multi_file_test  ogg_opus_test  ogg_test  pcm_test  peak_chunk_test  pedantic-header-test.sh  pipe_test  raw_test  rdwr_test  scale_clip_test  sfversion  stdin_test  stdio_test  stdout_test  string_test  (+6 more)
lib/portaudio/: CMakeLists.txt
src/: aoa_test.c  basis_audio_program.c  basis_audio_program_adctimestamps.c  basis_audio_program_threads.c  basis_audio_program_timestamps.c  continuous_capture.c  pa_devs.c  paex_pink.c  paex_read_write_wire.c  record_example.c  test_fftw.c  thread_example.c
(+546 files in other folders)
